--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
+
 {
-  "presets": ["es2015", "stage-0", "stage-2"],
-  "plugins": ["transform-vue-jsx", "transform-runtime", "add-module-exports", "transform-export-extensions"],
+  "presets": ["es2015", "stage-0"],
+  "plugins": ["transform-export-extensions"],
   "comments": false
 }
