--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "brace": "^0.10.0"
+    "brace": "^0.10.0",
+    "node-sass": "^4.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
