--- a/wiki/config.json
+++ b/wiki/config.json
@@ -3,5 +3,5 @@
     "lineBreaks": "gfm",
     "additionalFooterText": "",
     "anchorCharacter": "&#x2693;",
-    "title": "商业产品"
+    "title": "文档平台"
 }
